--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ env:
     - COMMIT_AUTHOR_EMAIL: orex@travis-ci.org
     - TEST_PROGRAM_CMD="-d -i ../data/examples/Ca2Al2SiO7/Ca2Al2SiO7.cif | grep -q "The total number of combinations is 6"
 
-sudo: required
-
 group: travis_latest
 
+os: linux
 dist: xenial
 language: cpp
 cache: ccache
@@ -60,10 +59,11 @@ jobs:
 
    - name: "Deploy build MacOS."
      os: osx
+     osx_image: xcode11
      env: BUILD_TYPE=PROGRAM
           CMAKE_COMMAND='cmake'
           DEPLOY_BUILD="osx"
-          OB_241_STABLE=FALSE
+          OB_241_STABLE=TRUE
           OB_CMAKE_OPTIONS="-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF"
           SUPERCELL_CMAKE_OPTIONS="-DLINK_STATIC_LIBS=ON"
 
@@ -132,11 +132,13 @@ addons:
     - zip
 
   homebrew:
-    update: true
+    update: false
     packages:
     - boost
     - eigen
     - libarchive
+    - zlib
+    - libxml2
 
 
 before_install:
@@ -180,6 +182,10 @@ script:
    if ((FINISH_TIME-START_TIME < 1800)); then
      if [[ ${BUILD_TYPE} == PROGRAM ]] || [[ ${BUILD_TYPE} == CROSS ]]; then
         cd tmp/openbabel/build
+        if [[ ${TRAVIS_OS_NAME} == osx ]]; then
+          export PKG_CONFIG_PATH="/usr/local/opt/libxml2/lib/pkgconfig:/usr/local/opt/libarchive/lib/pkgconfig"
+          export ZLIB_ROOT_DIR="/usr/local/opt/zlib/"
+        fi
         ${CMAKE_COMMAND} ../ -DCMAKE_BUILD_TYPE=Release `echo ${OB_CMAKE_OPTIONS}`
         make -j 2
         if [[ ${BUILD_TYPE} == PROGRAM ]]; then 
