--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,16 +30,27 @@ if(NOT ${EIGEN3_FOUND})
 endif()
 
 find_package(TBB COMPONENTS tbb)
+
+if (NOT TBB_USE_GLIBCXX_VERSION AND UNIX AND NOT APPLE)
+  if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    # using Clang
+    string(REPLACE "." "0" TBB_USE_GLIBCXX_VERSION ${CMAKE_CXX_COMPILER_VERSION})
+  endif()
+endif()
+
 if( NOT ${TBB_FOUND} )
   if( ${PkgConfig_FOUND} )
-    pkg_check_modules(TBB REQUIRED IMPORTED_TARGET intel-tbb)
+    pkg_search_module(TBB REQUIRED IMPORTED_TARGET intel-tbb tbb)
+    if (TBB_USE_GLIBCXX_VERSION)
+      target_compile_definitions(PkgConfig::TBB INTERFACE TBB_USE_GLIBCXX_VERSION=${TBB_USE_GLIBCXX_VERSION})
+    endif()
     add_library(TBB::tbb ALIAS PkgConfig::TBB)
   else()
     find_package(TBB REQUIRED COMPONENTS tbb)
   endif()
 elseif( LINK_STATIC_LIBS )
   get_property(pmt TARGET TBB::tbb PROPERTY IMPORTED_LOCATION_RELEASE)
-  string(REPLACE "libtbb.so" "libtbb_static.a" pmt ${pmt})
+  string(REGEX REPLACE "libtbb\.(so|dylib)" "libtbb_static.a" pmt ${pmt})
   set_property(TARGET TBB::tbb PROPERTY IMPORTED_LOCATION_RELEASE ${pmt})
 endif()
 
