--- a/.travis.yml
+++ b/.travis.yml
@@ -14,18 +14,24 @@ jobs:
  include:
    - name: "Developing build."
      env: BUILD_TYPE=PROGRAM
-          CMAKE_COMMAND='cmake'
+          CMAKE_COMMAND='/usr/bin/cmake'
+          DEPLOY_BUILD=FALSE
+
+   - name: "Developing build for focal (20.04)"
+     dist: focal
+     env: BUILD_TYPE=PROGRAM
+          CMAKE_COMMAND='/usr/bin/cmake'
           DEPLOY_BUILD=FALSE
 
    - name: "Developing build for old xenial platform."
      dist: xenial
      env: BUILD_TYPE=PROGRAM
-          CMAKE_COMMAND='cmake'
+          CMAKE_COMMAND='/usr/bin/cmake'
           DEPLOY_BUILD=FALSE
 
    - name: "Developing build without LibArchive support."
      env: BUILD_TYPE=PROGRAM
-          CMAKE_COMMAND='cmake'
+          CMAKE_COMMAND='/usr/bin/cmake'
           DEPLOY_BUILD=FALSE
           SUPERCELL_CMAKE_OPTIONS="-DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=TRUE"
 
@@ -33,24 +39,24 @@ jobs:
      compiler: clang
      cache: false
      env: BUILD_TYPE=PROGRAM
-          CMAKE_COMMAND='cmake'
+          CMAKE_COMMAND='/usr/bin/cmake'
           DEPLOY_BUILD=FALSE
 
    - name: "Deploy build Linux."
      compiler: gcc
      env: BUILD_TYPE=PROGRAM
-          CMAKE_COMMAND='cmake'
+          CMAKE_COMMAND='/usr/bin/cmake'
           LIBARCHIVE_OFF=FALSE
           DEPLOY_BUILD="linux"
           SUPERCELL_CMAKE_OPTIONS="-DLINK_STATIC_LIBS=ON"
 
    - name: "Deploy build MacOS."
      os: osx
-     osx_image: xcode11
+     osx_image: xcode12
      env: BUILD_TYPE=PROGRAM
-          CMAKE_COMMAND='cmake'
+          CMAKE_COMMAND='/usr/local/opt/cmake/bin/cmake'
           DEPLOY_BUILD="osx"
-          SUPERCELL_CMAKE_OPTIONS="-DLINK_STATIC_LIBS=ON"
+          SUPERCELL_CMAKE_OPTIONS="-DLINK_STATIC_LIBS=ON -DLibArchive_INCLUDE_DIR=/usr/local/opt/libarchive/include"
 
    - name: "Deploy build Windows crosscompile."
      cache:
@@ -68,7 +74,7 @@ jobs:
        apt:
          update: true
          packages:
-           - wine
+           - wine-stable
            - autopoint
            - gperf
            - intltool
@@ -78,8 +84,9 @@ jobs:
            - p7zip-full
            
    - name: "Deploy build documentation."
+     dist: focal
      env: BUILD_TYPE=DOC
-          CMAKE_COMMAND='cmake'
+          CMAKE_COMMAND='/usr/bin/cmake'
           DEPLOY_BUILD="doc"
      cache: false
      addons:
@@ -88,10 +95,9 @@ jobs:
          packages:
          - lmodern
          - texlive-extra-utils
-         - python
+         - python3-pygments
          - texlive-extra-utils
          - texlive-latex-extra
-         - python-pygments
          - texlive-science
          - texlive-humanities
          - texlive-pstricks
@@ -102,21 +108,23 @@ addons:
   apt:
     update: true
     packages:
+    - libarchive-dev
     - libboost-program-options-dev
     - libboost-regex-dev
     - libboost-filesystem-dev
     - libboost-random-dev
     - libboost-system-dev
+    - libtbb-dev
     - libeigen3-dev
-    - libarchive-dev
     - liblzma-dev
     - libbz2-dev
     - zlib1g-dev
     - zip
 
   homebrew:
-    update: true
+    update: false
     packages:
+    - cmake
     - boost
     - eigen
     - libarchive
@@ -126,6 +134,34 @@ addons:
 
 before_install:
  - export c_path=${PWD}
+ - |
+   if [[ ${TRAVIS_OS_NAME} == "linux" ]]; then
+     wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo apt-key add -
+     sudo apt-add-repository "deb https://apt.kitware.com/ubuntu/ $(lsb_release -sc) main"
+     sudo apt-get update && sudo apt-get -y install cmake
+     printenv
+   fi
+ - |
+   if [[ ${DEPLOY_BUILD} == "linux" ]]; then
+     sudo apt purge libarchive-dev
+     wget -nv https://github.com/libarchive/libarchive/releases/download/3.5.1/libarchive-3.5.1.tar.gz
+     tar -xf libarchive-3.5.1.tar.gz
+     cd libarchive-3.5.1
+     ./configure --without-openssl --without-libb2 --without-xml2 --without-expat --disable-bsdtar
+     sed -ir '/^.*#define HAVE_LZMA_STREAM_ENCODER_MT 1.*$/d' config.h
+     make -j 4
+     sudo make install
+   fi
+ - |
+   if [[ ${TRAVIS_OS_NAME} == "osx" ]]; then
+     # Install tbb from github to link statically
+     git clone --depth 1 https://github.com/wjakob/tbb.git
+     cd tbb && mkdir cmake-build && cd cmake-build
+     cmake ../ -DCMAKE_BUILD_TYPE=Release -DTBB_BUILD_TBBMALLOC=OFF -DTBB_BUILD_TBBMALLOC_PROXY=OFF -DTBB_BUILD_TESTS=OFF
+     make -j 4
+     sudo make install
+   fi
+
 
 install:
  - export START_TIME=`date +%s`
@@ -137,7 +173,10 @@ install:
      ln -s $HOME/.cache_mxe .ccache
      while(true); do sleep 9m; echo "watchdog signal"; done &
      WATCHDOG_PID=$!
-     make MXE_TARGETS=${CROSS_TARGET} MXE_PLUGIN_DIRS=plugins/gcc9 intel-tbb boost eigen --jobs=4 JOBS=2
+     make MXE_TARGETS=${CROSS_TARGET} MXE_PLUGIN_DIRS=plugins/gcc9 cc --jobs=4 JOBS=2
+     if ((`date +%s`-START_TIME < 1200)); then
+       make MXE_TARGETS=${CROSS_TARGET} MXE_PLUGIN_DIRS=plugins/gcc9 intel-tbb boost eigen --jobs=4 JOBS=2
+     fi
      kill $WATCHDOG_PID
      export PATH=${PWD}/usr/bin:$PATH
      popd
