Tutorial changed. v2.0 updated. Problem solving section.

--- a/.travis.yml
+++ b/.travis.yml
@@ -102,7 +102,7 @@ jobs:
          - texlive-humanities
          - texlive-pstricks
          - texlive-fonts-recommended
-
+         - texlive-pictures
 
 addons:
   apt:
